--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 </head>
 <body>
     <div id="app">
-        <div class="container">
-            <h1 class="pt-3">La tua lista di email</h1>
-            <ul>
-                <li v-for="email in emails">{{email}}</li>
-            </ul>
+        <div class="container d-flex justify-content-center">
+            <div class="card w-50 mt-5 text-center">
+                <div class="card-header">
+                    <h1 class="text-uppecase">La tua lista di email</h1>
+                </div>
+                <ul class="list-group list-group-flush" v-if="emails.length >= 10">
+                    <li class="list-group-item" v-for="email in emails">{{email}}</li>
+                </ul>
+            </div>
         </div>
     </div>
 
