added btn to gen new list

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <div id="app">
-        <div class="container d-flex justify-content-center">
+        <div class="container d-flex justify-content-center align-items-center flex-column">
+            <button class="btn btn-primary mt-5" @click="newList()">Genera nuova lista</button>
             <div class="card w-50 mt-5 text-center">
                 <div class="card-header">
                     <h1 class="text-uppecase">La tua lista di email</h1>
@@ -22,6 +23,7 @@
                 </ul>
             </div>
         </div>
+
     </div>
 
 
